--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
 
     <header class="page-header" role="banner">
 <!--       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
- -->      <h1 class="project-name">三菜一汤</h1>
+ -->            
+ <h1 class="project-name">{{ site.title }}</h1>
+
 
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
     </header>
