--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -127,6 +127,7 @@ a {
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem;
+  font-family: "Lucida Calligraphy", cursive, serif, sans-serif;
 
   @include large {
     font-size: 3.25rem;
