--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,14 @@
 ---
 
 @import 'jekyll-theme-cayman';
+.videoContent {
+    width: 100%;
+    height: 100%;
+    // display: block;
+  }
+  .videoContent video {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    // object-fit: cover;
+  }
