--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -377,3 +377,14 @@ a {
 .site-footer-credits {
   color: $blockquote-text-color;
 }
+.videoContent {
+    width: 100%;
+    height: 100%;
+    // display: block;
+ }
+.videoContent video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  // object-fit: cover;
+}
